src/test/ui/const-generics/issues/issue-72819-generic-in-const-eval.full.stderr
error: constant expression depends on a generic parameter
  --> $DIR/issue-72819-generic-in-const-eval.rs:8:39
   |
LL | where Assert::<{N < usize::MAX / 2}>: IsTrue,
   |                                       ^^^^^^
   |
   = note: this may fail depending on what value the parameter takes

error: aborting due to previous error

